<resources>
    <string name="app_name">Campus Connect</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_notifications">Notifications</string>
    <string name="bottom_add_complaint">Add Complaint</string>
    <string name="bottom_notices">Notices</string>
    <string name="bottom_my_profile">My Profile</string>
    <string name="Complaint">Add a Complaint</string>
    <string name="subject">Subject</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="discard">Discard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="issue">Issue</string>
    <string name="suggestions">Suggestions</string>
    <string name="unsatisfied_n_reopen_the_problem">Unsatisfied?\n Reopen the Problem </string>
    <string name="rate_the_solution">Rate the Solution</string>
    <string name="input_your_suggestion">Input your Suggestions </string>
    <string name="reopen_the_problem">Reopen The Problem</string>
    <string name="your_name">Your Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="email_id">Email ID</string>
    <string name="select_your_college">Select Your College</string>
    <string name="select_your_department">Select Your Department</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account_yet">No Account Yet?</string>
    <string name="login_signup">Login/SignUp</string>
    <string name="signup">SIgnup</string>
    <string name="nodal_officer">Nodal Officer</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>

    /////

    <string name="changePassword">Change Password</string>
    <string name="updateProfile">Update Profile</string>
    <string name="edit">Edit</string>
    <string name="name">Name:</string>
    <string name="mobileNumber">Mobile Number:</string>
    <string name="currentPassword">Current Password:</string>
    <string name="newPassword">New Password:</string>
    <string name="saveChanges">Save Changes</string>
    <string name="changeName">Change Your Name:</string>
    <string name="enterName">Enter Your Name:</string>
    <string name="changeNumber">Change Your Mobile Number:</string>
    <string name="enteroldNumber">Enter Your New Mobile Number</string>
    <string name="Continue">Continue</string>
    <string name="verifyOtp">Verify Otp</string>
    <string name="verify">Verify</string>
    <string name="enterOtp">Enter Otp You Received:</string>

</resources>