<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_home" />
    <item
        android:id="@+id/notices"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/bottom_notices" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/bottom_add_complaint" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_notifications" />
    <item
        android:id="@+id/my_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/bottom_my_profile" />
</menu>