<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.campusconnect.FeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/issue"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rate_the_solution"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/suggestions"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/input_your_suggestion"
            android:inputType="textMultiLine"
            android:labelFor="@+id/editText"
            android:lines="5" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:background="#3f51b5"
            android:text="@string/submit"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/unsatisfied_n_reopen_the_problem"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/reopen_the_problem"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>