<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hp.campusconnect.AddComplaintFragment">

    <TextView
        android:id="@+id/complaintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Complaint"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/complaintText"
        android:layout_marginTop="@dimen/elementSpacing">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/spinnerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject"
        android:layout_marginTop="@dimen/elementSpacing"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinnerWidth"
        android:layout_below="@+id/subject"
        android:layout_marginTop="@dimen/elementSpacing"
        android:layout_toEndOf="@+id/spinnerText" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_marginTop="@dimen/elementSpacing">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="5" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/category"
        android:layout_marginStart="22dp"
        android:text="@string/submit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/submitButton"
        android:text="@string/discard" />
</RelativeLayout>