<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/DialogBox"
    android:layout_height="@dimen/DialogBox2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeName"
        android:id="@+id/text"
        android:textSize="@dimen/textSize"
        android:layout_marginLeft="@dimen/marginSize2"
        android:layout_marginTop="@dimen/marginSize2"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/changeName"
        android:layout_marginStart="@dimen/marginSize2"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changeName1"
            android:hint="@string/enterName"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="@dimen/DialogBox"
        android:layout_height="wrap_content"
        android:id="@+id/saveName"
        android:text="@string/saveChanges"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>