<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:drawableTop="@drawable/nodal"
        android:gravity="center"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="0dp"
        android:text="@string/nodal_officer"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:drawableTop="@drawable/teacher"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/teacher"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:drawableTop="@drawable/student"
        android:onClick="selectUser"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/student"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>